# rust_dars

./: .gitignore  Cargo.toml  Makefile
notebooks/: PolarsInRust.ipynb
py-dars/: Makefile  requirements.txt
src/: main.rs
