[package]
name = "rust_dars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.33", features = [
    "lazy",
    "temporal",
    "describe",
    "json",
    "parquet",
    "dtype-datetime",
    "ndarray",
    "fmt",
    "round_series",
] }

chrono = "0.4"
rand = "0.8.5"
